
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(LIBJPEG_SRC_DIR)

    PROJECT(jpeg C)

    SET(TARGET_NAME_SHARED ${LIBJPEG_TARGET_NAME_SHARED})
    SET(TARGET_NAME_STATIC ${LIBJPEG_TARGET_NAME_STATIC})

    EXECUTE_PROCESS(
        COMMAND "${CMAKE_COMMAND}" "-E" "copy_if_different"
        "${LIBJPEG_SRC_DIR}/jconfig.vc"
        "${CMAKE_CURRENT_BINARY_DIR}/jconfig.h")

    EXECUTE_PROCESS(
        COMMAND "${CMAKE_COMMAND}" "-E" "copy_if_different"
        "${CMAKE_CURRENT_SOURCE_DIR}/jmorecfg.h"
        "${LIBJPEG_SRC_DIR}/jmorecfg.h")

    SET(C_SRC_FILES)
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jmemnobs.c")

    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcapimin.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcapistd.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdapimin.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdapistd.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcomapi.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcparam.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jctrans.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdtrans.c")

    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcinit.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcmaster.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcmainct.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcprepct.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jccoefct.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jccolor.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcsample.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcdctmgr.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jfdctint.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jfdctfst.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jfdctflt.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jchuff.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcarith.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jcmarker.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdatadst.c")

    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdmaster.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdinput.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdmainct.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdcoefct.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdpostct.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdmarker.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdhuff.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdarith.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jddctmgr.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jidctint.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jidctfst.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jidctflt.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdsample.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdcolor.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdmerge.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jquant1.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jquant2.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jdatasrc.c")

    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jaricom.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jerror.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jmemmgr.c")
    LIST(APPEND C_SRC_FILES "${LIBJPEG_SRC_DIR}/jutils.c")

    SET(C_HDR_FILES)
    LIST(APPEND C_HDR_FILES "${LIBJPEG_SRC_DIR}/jpeglib.h")
    LIST(APPEND C_HDR_FILES "${LIBJPEG_SRC_DIR}/jmorecfg.h")
    LIST(APPEND C_HDR_FILES "${LIBJPEG_SRC_DIR}/jerror.h")
    LIST(APPEND C_HDR_FILES "${LIBJPEG_SRC_DIR}/jversion.h")

    LIST(APPEND C_HDR_FILES "${CMAKE_CURRENT_BINARY_DIR}/jconfig.h")

    INCLUDE_DIRECTORIES("${LIBJPEG_SRC_DIR}")
    INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

    IF(BUILD_SHARED_LIBS)
        ADD_LIBRARY(${TARGET_NAME_SHARED} SHARED ${C_SRC_FILES})

        SET_TARGET_PROPERTIES(${TARGET_NAME_SHARED}  PROPERTIES
            DEFINE_SYMBOL LIBJPEG_BUILD_DLL
            DEBUG_POSTFIX "d")

        INSTALL(TARGETS ${TARGET_NAME_SHARED}
            CONFIGURATIONS Release Debug
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
    ENDIF(BUILD_SHARED_LIBS)

    IF(BUILD_STATIC_LIBS)
        ADD_LIBRARY(${TARGET_NAME_STATIC} STATIC ${C_SRC_FILES})

        SET_TARGET_PROPERTIES(${TARGET_NAME_STATIC}  PROPERTIES
            DEBUG_POSTFIX "d")

        INSTALL(TARGETS ${TARGET_NAME_STATIC}
            CONFIGURATIONS Release Debug
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
    ENDIF(BUILD_STATIC_LIBS)

ELSE(LIBJPEG_SRC_DIR)
    MESSAGE(STATUS "LIBJPEG_SRC_DIR not set - can not build libjpeg")
ENDIF(LIBJPEG_SRC_DIR)
