
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(LIBPNG_SRC_DIR)

    PROJECT(png C)

    SET(TARGET_NAME_SHARED ${LIBPNG_TARGET_NAME_SHARED})
    SET(TARGET_NAME_STATIC ${LIBPNG_TARGET_NAME_STATIC})

    SET(C_SRC_FILES)
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/png.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngerror.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngget.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngmem.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngpread.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngread.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngrio.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngrtran.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngrutil.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngset.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngtrans.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngwio.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngwrite.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngwtran.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngwutil.c")

    SET(C_HDR_FILES)
    LIST(APPEND C_HDR_FILES "${LIBPNG_SRC_DIR}/png.h")
    LIST(APPEND C_HDR_FILES "${LIBPNG_SRC_DIR}/pngconf.h")

    IF(ZLIB_SRC_DIR)
        SET(ZLIB_LIBRARIES    ${ZLIB_TARGET_NAME_SHARED})
        SET(ZLIB_INCLUDE_DIRS ${ZLIB_SRC_DIR})
    ELSE(ZLIB_SRC_DIR)
        FIND_PACKAGE(ZLIB REQUIRED)
    ENDIF(ZLIB_SRC_DIR)

    INCLUDE_DIRECTORIES("${LIBPNG_SRC_DIR}")
    INCLUDE_DIRECTORIES("${ZLIB_INCLUDE_DIRS}")

    IF(BUILD_SHARED_LIBS)
        ADD_LIBRARY(${TARGET_NAME_SHARED} SHARED ${C_SRC_FILES})

        SET_TARGET_PROPERTIES(${TARGET_NAME_SHARED}  PROPERTIES
            DEFINE_SYMBOL PNG_BUILD_DLL
            DEBUG_POSTFIX "d")

        TARGET_LINK_LIBRARIES(${TARGET_NAME_SHARED} ${ZLIB_LIBRARIES})

        INSTALL(TARGETS ${TARGET_NAME_SHARED}
            CONFIGURATIONS Release Debug
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
    ENDIF(BUILD_SHARED_LIBS)

    IF(BUILD_STATIC_LIBS)
        ADD_LIBRARY(${TARGET_NAME_STATIC} STATIC ${C_SRC_FILES})

        SET_TARGET_PROPERTIES(${TARGET_NAME_STATIC}  PROPERTIES
            DEBUG_POSTFIX "d")

        INSTALL(TARGETS ${TARGET_NAME_STATIC}
            CONFIGURATIONS Release Debug
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
    ENDIF(BUILD_STATIC_LIBS)

    INSTALL(FILES ${C_HDR_FILES}
        DESTINATION include
        PERMISSIONS OWNER_READ OWNER_WRITE
                    GROUP_READ
                    WORLD_READ)

ELSE(LIBPNG_SRC_DIR)
    MESSAGE(STATUS "LIBPNG_SRC_DIR not set - can not build libpng")
ENDIF(LIBPNG_SRC_DIR)
