
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(LIBPNG_SRC_DIR)

    PROJECT(png C)

    # sanity check LIBPNG_SRC_DIR
    IF(NOT EXISTS "${LIBPNG_SRC_DIR}/png.h")
        MESSAGE(SEND_ERROR "No file 'png.h' in LIBPNG_SRC_DIR = '${LIBPNG_SRC_DIR}'")
        RETURN()
    ENDIF(NOT EXISTS "${LIBPNG_SRC_DIR}/png.h")

    SET(TARGET_NAME_SHARED ${LIBPNG_TARGET_NAME_SHARED})
    SET(TARGET_NAME_STATIC ${LIBPNG_TARGET_NAME_STATIC})

    IF(SEPARATE_INSTALL_DIRS)
        SET(LIBPNG_RUNTIME_INSTALL_DIR "libpng/bin")
        SET(LIBPNG_LIBRARY_INSTALL_DIR "libpng/lib")
        SET(LIBPNG_ARCHIVE_INSTALL_DIR "libpng/lib")
        SET(LIBPNG_HEADER_INSTALL_DIR  "libpng/include")
    ELSE(SEPARATE_INSTALL_DIRS)
        SET(LIBPNG_RUNTIME_INSTALL_DIR "bin")
        SET(LIBPNG_LIBRARY_INSTALL_DIR "lib")
        SET(LIBPNG_ARCHIVE_INSTALL_DIR "lib")
        SET(LIBPNG_HEADER_INSTALL_DIR  "include")
    ENDIF(SEPARATE_INSTALL_DIRS)

    SET(C_SRC_FILES)
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/png.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngerror.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngget.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngmem.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngpread.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngread.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngrio.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngrtran.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngrutil.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngset.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngtrans.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngwio.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngwrite.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngwtran.c")
    LIST(APPEND C_SRC_FILES "${LIBPNG_SRC_DIR}/pngwutil.c")

    SET(C_HDR_FILES)
    LIST(APPEND C_HDR_FILES "${LIBPNG_SRC_DIR}/png.h")
    LIST(APPEND C_HDR_FILES "${LIBPNG_SRC_DIR}/pngconf.h")
    LIST(APPEND C_HDR_FILES "${LIBPNG_SRC_DIR}/pnglibconf.h")

    SET(TEST0_C_SRC_FILES)
    LIST(APPEND TEST0_C_SRC_FILES "${LIBPNG_SRC_DIR}/pngtest.c")

    SET(TEST0_TARGET_NAME_SHARED "libpng-pngtest-shared")
    SET(TEST0_TARGET_NAME_STATIC "libpng-pngtest-static")

    IF(ZLIB_SRC_DIR)
        SET(ZLIB_LIBRARIES    ${ZLIB_TARGET_NAME_SHARED})
        SET(ZLIB_INCLUDE_DIRS ${ZLIB_SRC_DIR})
    ELSE(ZLIB_SRC_DIR)
        FIND_PACKAGE(ZLIB REQUIRED)
    ENDIF(ZLIB_SRC_DIR)

    INCLUDE_DIRECTORIES("${LIBPNG_SRC_DIR}")
    INCLUDE_DIRECTORIES("${ZLIB_INCLUDE_DIRS}")

    IF(BUILD_SHARED_LIBS)
        ADD_LIBRARY(${TARGET_NAME_SHARED} SHARED ${C_SRC_FILES})

        SET_TARGET_PROPERTIES(${TARGET_NAME_SHARED}  PROPERTIES
            DEFINE_SYMBOL PNG_BUILD_DLL
            DEFINE_SYMBOL PNG_BUILD
            DEBUG_POSTFIX "d")

        TARGET_LINK_LIBRARIES(${TARGET_NAME_SHARED} ${ZLIB_LIBRARIES})

        INSTALL(TARGETS ${TARGET_NAME_SHARED}
            CONFIGURATIONS Release Debug
            RUNTIME DESTINATION ${LIBPNG_RUNTIME_INSTALL_DIR}
            LIBRARY DESTINATION ${LIBPNG_LIBRARY_INSTALL_DIR}
            ARCHIVE DESTINATION ${LIBPNG_ARCHIVE_INSTALL_DIR})

        IF(BUILD_TESTS)
            ADD_EXECUTABLE(${TEST0_TARGET_NAME_SHARED} ${TEST0_C_SRC_FILES})
            TARGET_LINK_LIBRARIES(${TEST0_TARGET_NAME_SHARED} ${TARGET_NAME_SHARED})
        ENDIF(BUILD_TESTS)
    ENDIF(BUILD_SHARED_LIBS)

    IF(BUILD_STATIC_LIBS)
        ADD_LIBRARY(${TARGET_NAME_STATIC} STATIC ${C_SRC_FILES})

        SET_TARGET_PROPERTIES(${TARGET_NAME_STATIC}  PROPERTIES
            DEFINE_SYMBOL PNG_BUILD
            DEBUG_POSTFIX "d")

        INSTALL(TARGETS ${TARGET_NAME_STATIC}
            CONFIGURATIONS Release Debug
            RUNTIME DESTINATION ${LIBPNG_RUNTIME_INSTALL_DIR}
            LIBRARY DESTINATION ${LIBPNG_LIBRARY_INSTALL_DIR}
            ARCHIVE DESTINATION ${LIBPNG_ARCHIVE_INSTALL_DIR})

        IF(BUILD_TESTS)
            ADD_EXECUTABLE(${TEST0_TARGET_NAME_STATIC} ${TEST0_C_SRC_FILES})
            TARGET_LINK_LIBRARIES(${TEST0_TARGET_NAME_STATIC} ${TARGET_NAME_STATIC})
            TARGET_LINK_LIBRARIES(${TEST0_TARGET_NAME_STATIC} ${ZLIB_TARGET_NAME_STATIC})
        ENDIF(BUILD_TESTS)
    ENDIF(BUILD_STATIC_LIBS)

    INSTALL(FILES ${C_HDR_FILES}
        DESTINATION ${LIBPNG_HEADER_INSTALL_DIR}
        PERMISSIONS OWNER_READ OWNER_WRITE
                    GROUP_READ
                    WORLD_READ)

ELSE(LIBPNG_SRC_DIR)
    MESSAGE(STATUS "LIBPNG_SRC_DIR not set - can not build libpng")
ENDIF(LIBPNG_SRC_DIR)
