
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(ZLIB_SRC_DIR)

    PROJECT(zlib C)

    SET(TARGET_NAME_SHARED ${ZLIB_TARGET_NAME_SHARED})
    SET(TARGET_NAME_STATIC ${ZLIB_TARGET_NAME_STATIC})

    SET(LIB_C_SRC_FILES)
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/adler32.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/compress.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/crc32.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/deflate.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/gzclose.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/gzlib.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/gzread.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/gzwrite.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/infback.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/inffast.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/inflate.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/inftrees.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/trees.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/uncompr.c")
    LIST(APPEND LIB_C_SRC_FILES "${ZLIB_SRC_DIR}/zutil.c")

    SET(LIB_C_HDR_FILES)
    LIST(APPEND LIB_C_HDR_FILES "${ZLIB_SRC_DIR}/zconf.h")
    LIST(APPEND LIB_C_HDR_FILES "${ZLIB_SRC_DIR}/zlib.h")

    SET(TEST0_C_SRC_FILES)
    LIST(APPEND TEST0_C_SRC_FILES "${ZLIB_SRC_DIR}/test/example.c")

    SET(TEST0_TARGET_NAME_SHARED "zlib-example-shared")
    SET(TEST0_TARGET_NAME_STATIC "zlib-example-static")

    INCLUDE_DIRECTORIES("${ZLIB_SRC_DIR}")

    IF(BUILD_SHARED_LIBS)
        ADD_LIBRARY(${TARGET_NAME_SHARED} SHARED ${LIB_C_SRC_FILES})

        SET_TARGET_PROPERTIES(${TARGET_NAME_SHARED}  PROPERTIES
            DEFINE_SYMBOL ZLIB_DLL
            DEBUG_POSTFIX "d")

        INSTALL(TARGETS ${TARGET_NAME_SHARED}
            CONFIGURATIONS Release Debug
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)

        IF(BUILD_TESTS)
            ADD_EXECUTABLE(${TEST0_TARGET_NAME_SHARED} ${TEST0_C_SRC_FILES})
            TARGET_LINK_LIBRARIES(${TEST0_TARGET_NAME_SHARED} ${TARGET_NAME_SHARED})
        ENDIF(BUILD_TESTS)
    ENDIF(BUILD_SHARED_LIBS)

    IF(BUILD_STATIC_LIBS)
        ADD_LIBRARY(${TARGET_NAME_STATIC} STATIC ${LIB_C_SRC_FILES})

        SET_TARGET_PROPERTIES(${TARGET_NAME_STATIC}  PROPERTIES
            DEBUG_POSTFIX "d")

        INSTALL(TARGETS ${TARGET_NAME_STATIC}
            CONFIGURATIONS Release Debug
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)

        IF(BUILD_TESTS)
            ADD_EXECUTABLE(${TEST0_TARGET_NAME_STATIC} ${TEST0_C_SRC_FILES})
            TARGET_LINK_LIBRARIES(${TEST0_TARGET_NAME_STATIC} ${TARGET_NAME_STATIC})
        ENDIF(BUILD_TESTS)
    ENDIF(BUILD_STATIC_LIBS)

    INSTALL(FILES ${LIB_C_HDR_FILES}
        DESTINATION include
        PERMISSIONS OWNER_READ OWNER_WRITE
                    GROUP_READ
                    WORLD_READ)

ELSE(ZLIB_SRC_DIR)
    MESSAGE(STATUS "ZLIB_SRC_DIR not set - can not build zlib")
ENDIF(ZLIB_SRC_DIR)
